# simple-python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  poetry.toml  pyproject.toml
data/: example.json
src/: main.py  project_name.py  utils.py
tests/: test_utils.py
